--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,6 @@ code {
   outline: none !important;
   box-shadow: none !important;
   heigth: 100% !important;
-  /* Add any other styles you need */
 }
 
 .ql-editor p img {
@@ -34,28 +33,30 @@ code {
   max-width: 100%;
 }
 
-/* Default height for screens smaller than 768px */
 .ql-editor .ql-video {
   width: 100%;
-  height: 250px; /* Adjust the default height as needed */
 }
 
-/* Media query for screens 768px and larger */
 @media screen and (min-width: 768px) {
   .ql-editor .ql-video {
-    height: 350px; /* Adjust the height for screens 768px and larger */
+    height: 350px;
   }
 }
 
-/* Media query for screens 1024px and larger */
 @media screen and (min-width: 1024px) {
   .ql-editor .ql-video {
-    height: 450px; /* Adjust the height for screens 1024px and larger */
+    height: 450px;
   }
 }
 
 @media screen and (min-width: 1724px) {
   .ql-editor .ql-video {
-    height: 550px; /* Adjust the height for screens 1024px and larger */
+    height: 550px;
   }
+}
+
+._5pcb _5tmf _50f3 {
+  display: block;
+  margin: auto;
+  width: 100% !important;
 }
